[package]
name = "libdd-libunwind-sys"
version = "1.0.0"
description = "Rust bindings for using unwind library inside libdatadog"
homepage = "https://github.com/DataDog/libdatadog/tree/main/libdd-libunwind-sys"
repository = "https://github.com/DataDog/libdatadog/tree/main/libdd-libunwind-sys"
rust-version = "1.84.1"
edition = "2021"
license= "Apache-2.0"
links = "unwind"  # Tells Cargo this crate links to libunwind (prevents multiple builds)

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
paste = "1.0"
libc = "0.2"

[build-dependencies]
cc = "1.0"
